# workspacer

./: CHANGES.md  Cargo.toml
.github/: env
.github/workflows/: release.yml  test.yml
add/: Cargo.toml
add/src/: lib.rs
crates/dummy/: Cargo.toml
crates/dummy/src/: lib.rs
div/: Cargo.toml
div/src/: lib.rs
mul/: Cargo.toml
mul/src/: lib.rs
src/: main.rs
sub/: Cargo.toml
sub/src/: lib.rs
