[package]
name = "calculator"
version = "0.4.0-SNAPSHOT"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"

[dependencies]
add.workspace = true
sub.workspace = true
mul.workspace = true
div.workspace = true
dummy.workspace = true

# Not necessary, since path dependencies are automatically members!
#[workspace]
#members = [
#    "add",
#    "sub",
#    "mul",
#    "div",
#]

[workspace.dependencies]
# Public members
add = { version = "0.2.0-SNAPSHOT", path = "add" }
sub = { version = "0.2.0-SNAPSHOT", path = "sub" }
mul = { version = "0.3.0-SNAPSHOT", path = "mul" }
div = { version = "0.3.0-SNAPSHOT", path = "div" }

# Interal members
dummy = { version = "0.0.0", path = "crates/dummy" }
