[package]
name = "calculator"
version = "0.5.0-RC"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"

[dependencies]
add.workspace = true
sub.workspace = true
mul.workspace = true
div.workspace = true
dummy.workspace = true

# Not necessary, since path dependencies are automatically members!
#[workspace]
#members = [
#    "add",
#    "sub",
#    "mul",
#    "div",
#]

[workspace.dependencies]
# Public members
add = { version = "0.3.0-RC", path = "add" }
sub = { version = "0.3.0-RC", path = "sub" }
mul = { version = "0.4.0-RC", path = "mul" }
div = { version = "0.4.0-RC", path = "div" }

# Interal members
dummy = { version = "0.0.0", path = "crates/dummy" }
